Handlets smaller, fix x overlapping with text

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -63,8 +63,8 @@ body {
 
 .resize-handle {
   position: absolute;
-  width: 8px;
-  height: 8px;
+  width: 4px;
+  height: 4px;
   background: #000;
   z-index: 10;
 }
